Add perpetual trading stack